Set the limit for deallocations in one transaction to a more realistic (and much lower) value.  When flushing the log these deallocations will produce new blocks and that may execeed the journal size resulting in a "wapbl_flush: current transaction too big to flush" panic. Seen when removing a large snapshot.

Adresses PR #44568 (WAPBL doens't play nice with snapshots).